--- a/app/assets/stylesheets/core/_main.scss
+++ b/app/assets/stylesheets/core/_main.scss
@@ -23,6 +23,7 @@
 		.container-header {
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
 
 			.header-title {
 				font-size: 2em;
