--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,13 @@
 @import "bootstrap-datepicker";
 @import "font-awesome";
 
-@import 'bourbon';
-@import 'neat';
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/maps";
+@import "bootstrap/mixins";
+@import "bootstrap/root";
+
+@import "bootstrap/grid";
 
 @import 'base/fonts';
 @import 'base/variables';
