--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -48,6 +48,7 @@
 
 			.order-status-title {
 				margin-bottom: 10px;
+				font-size: 1em;
 				font-weight: 600;
 
 				span {
@@ -209,6 +210,7 @@
 				    height: 100%;
 
 				    h3 {
+				    	font-size: 1.25em;
 				    	font-weight: 400;
 				    	margin-bottom: 5px;
 				    }
@@ -258,6 +260,8 @@
 	&.edit, &.update, &.show {
 		.order-tabs {
 			position: relative;
+			display: flex;
+			justify-content: center;
 
 			&:after {
 				content: "";
@@ -323,6 +327,7 @@
 	.main-panel {
 		.main-container {
 			.order-info {
+				justify-content: space-between;
 				align-items: flex-end;
 				margin-bottom: 5px;
 
@@ -334,6 +339,7 @@
 					font-size: .9em;
 					font-style: italic;
 					color: #d6d6d6;
+					text-align: right;
 				}
 			}
 
