--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,137 +1,14 @@
 <div class="box main-panel">
-	<%= render "layouts/main_menu" %>
+	<%= render "shared/main_menu" %>
+	
+	<div class="main-container">
+		<div class="row">
+			<div class="col">
+				<header class="container-header">
+					<h1 class="header-title">Editar dados do <span>chamado</span></h1>
 
-	<div class="container main-container">
-		<header class="container-header">
-			<h1 class="header-title">Editar dados do <span>chamado</span></h1>
-		</header>
-
-		<section class="container-body">
-			<div class="order-tabs flex-row h-centered m-b-25">
-				<div class="order-tab text-center">
-					<button class="btn-data <%= 'current' if !is_admin?%>" order-data="school-data">Informações do chamado</button>
-				</div>
-			  
-				<div class="order-tab text-center">
-			  	<button class="btn-data <%= 'current' if is_admin?%>" order-data="admin-data">Ordem de serviço</button>
-				</div>
-			</div>
-
-			<div class="row order-info m-b-25">
-    		<div class="col-6 order-id">
-    			<%= content_tag :h4 do %>
-    				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
-    				<%= content_tag :span, " - #{@order.school.name}" if is_admin? %>
-    			<% end %>
-    		</div>
-
-    		<div class="col-6 text-right updated-at">
-    			<%= content_tag :span, order_updated_at(@order.updated_at, @order.updated_by) %>
-    		</div>
-    	</div>
-
-    	<%= flash_message %>
-
-			<%= simple_form_for @order, url: edit_order_path, html: { class: "form" } do |f| %>
-	      <%= f.simple_fields_for :stuff do |s| %>
-	      	<%= f.input :updated_by, as: :hidden, label: false, input_html: { value: current_user.id }, wrapper: false %>
-	      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin? %>
-
-	      	<fieldset <%= "disabled=disabled" if is_admin? || @order.status != "Em aberto" %>>
-						<div id="school-data" class="order-data <%= 'current' if !is_admin?%>">
-		      		<%= f.input :user_id, as: :hidden, label: false, wrapper_html: { class: "m-t-0" } %>
-
-			      	<div class="row">
-			      		<div class="col-3 col-md-5 col-sm-12">
-		      				<%= f.input :requester, required: false, label: "Solicitante", label_html: { class: "form-label" } %>
-								</div>	      		
-			      	</div>
-				      		
-			      	<div class="row">
-								<div class="col-12">
-					      	<p class="equipment-category"><%= @stuff_category %></p>
-				          <%= s.input :category, label: false, as: :radio_buttons, collection: list_categories, wrapper_html: { class: "custom-radio" } %>
-								</div>	      		
-			      	</div>
-
-		          <div class="row">
-		          	<div class="col-3 col-md-4 col-sm-12">
-									<div class="input string" id="autocomplete-patrimony">
-		          			<label for="order[stuff_attributes][patrimony]" class="form-label">Nº patrimônio</label>
-										<%= autocomplete_field_tag "order[stuff_attributes][patrimony]", @patrimony, autocomplete_stuff_patrimony_orders_path, append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, maxlength: 6 %>
-									</div>
-		          	</div>
-
-		          	<div class="col-3 col-md-4 col-sm-12">
-		        			<%= s.input :brand, required: false, label: "Marca/modelo", collection: list_brands, include_blank: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-		          	</div>
-
-		          	<div class="col-3 col-md-4 col-sm-12">
-		        			<%= f.input :spot, required: false, label: "Local de instalação", collection: list_spots, include_blank: "Selecione o local de instalação...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-		          	</div>
-	          	</div>
-
-		          <div class="row m-t-50">
-		          	<div class="col-6 col-md-12">
-		          		<%= f.input :defect, required: false, label: "Defeito apresentado", as: :text, label_html: { class: "form-label" } %>
-		          	</div>
-		          </div>
-	    			</div>
-	    		</fieldset>
-
-    			<fieldset <%= "disabled=disabled" if !is_admin? %>>
-	    			<div id="admin-data" class="order-data <%= 'current' if is_admin?%>">
-			      	<div class="row">
-			      		<div class="col-4 col-md-6 col-sm-12">
-			      			<%= f.input :status, required: false, label: "Status", collection: list_status, include_blank: "Selecione o status...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select m-r-50" } %>
-								</div>	
-
-								<div class="col-4 col-md-6 col-sm-12">
-			      			<% if Stuff.find(@order.stuff_id).category == "PC/Notebook" %>
-			      				<%= f.input :backup, required: false, label: "Necessário backup?", as: :radio_buttons, collection: ['Sim', 'Não'], wrapper_html: { class: "boolean m-t-0" } %>
-									<% end %>
-								</div>      		
-							</div>
-
-			      	<div class="row">
-			      		<div class="col-8 col-md-6 col-sm-12">
-		          		<%= f.input :performed_service, required: false, label: "Serviço realizado", as: :text, label_html: { class: "form-label" } %>
-		          	</div>     		
-
-								<div class="col-4 col-md-6 col-sm-12">
-		          		<%= f.input :obs, required: false, label: "Observações", as: :text, label_html: { class: "form-label" } %>
-		          	</div>    
-			      	</div>
-
-
-			      	<div class="row">
-	      				<h3 class="uppercase m-b-25 highlight">Técnico responsável</h3>
-
-			      		<div class="col-4 col-md-6 col-sm-12">
-		          		<%= f.input :removal_technician, required: false, label: "Retirada", collection: @technicians, include_blank: "Quem retirou o equipamento?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-								</div>   		
-
-								<div class="col-4 col-md-6 col-sm-12">
-									<%= f.input :maintenance_technician, required: false, label: "Manutenção", collection: @technicians, include_blank: "Quem realizou o serviço?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-		          	</div>   
-			      	</div>
-
-
-          		<div class="row">
-          			<h3 class="uppercase m-b-25 highlight">Data</h3>
-          			
-				      	<div class="flex-row">
-			          	<div class="flex-col flex-col-12 flex-inline">
-										<%= f.input :start_date, required: false, html5: true, label: "Retirada", label_html: { class: "form-label" }, wrapper_html: { class: "m-r-15" } %>
-										<%= f.input :end_date, required: false, html5: true, label: "Entrega", label_html: { class: "form-label" }, wrapper_html: { class: "m-t-0" } %>
-									</div>
-				      	</div>
-          		</div>
-				    </div>
-	    		</fieldset>
-
-	    		<% if is_admin? || @order.status == "Em aberto" %>
-		        <div class="actions m-t-25">
+					<% if is_admin? || @order.status == "Em aberto" %>
+		        <div class="actions">
 		        	<%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
 		          <%= link_to orders_path, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
 		          <%= link_to destroy_order_path(@order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-alert icon" do %><span class="material-icons md-16 md-light">close</span>Cancelar chamado<% end %>
@@ -139,8 +16,138 @@
 		      <% else %>
 		      	<%= content_tag :p, "Este chamado está sendo ou já foi atendido, portanto não é mais possível fazer alterações.", class: "m-t-25 error alert" %>
 		      <% end %>
-	      <% end %>
-	    <% end %>
-		</section>
+				</header>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col">
+				<section class="container-body">
+					<div class="order-tabs m-b-10">
+						<div class="order-tab text-center">
+							<button class="btn-data <%= 'current' if !is_admin?%>" order-data="school-data">Informações do chamado</button>
+						</div>
+					  
+						<div class="order-tab text-center">
+					  	<button class="btn-data <%= 'current' if is_admin?%>" order-data="admin-data">Ordem de serviço</button>
+						</div>
+					</div>
+
+					<div class="row order-info m-b-25">
+		    		<div class="col-12 col-lg-6 order-id">
+		    			<%= content_tag :h4 do %>
+		    				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
+		    				<%= content_tag :span, " - #{@order.school.name}" if is_admin? %>
+		    			<% end %>
+		    		</div>
+
+		    		<div class="col-12 col-lg-6 updated-at">
+		    			<%= content_tag :span, order_updated_at(@order.updated_at, @order.updated_by) %>
+		    		</div>
+		    	</div>
+
+		    	<%= flash_message %>
+
+					<%= simple_form_for @order, url: edit_order_path, html: { class: "form" } do |f| %>
+			      <%= f.simple_fields_for :stuff do |s| %>
+			      	<%= f.input :updated_by, as: :hidden, label: false, input_html: { value: current_user.id }, wrapper: false %>
+			      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin? %>
+
+			      	<fieldset <%= "disabled=disabled" if is_admin? || @order.status != "Em aberto" %>>
+								<div id="school-data" class="order-data <%= 'current' if !is_admin?%>">
+				      		<%= f.input :user_id, as: :hidden, label: false, wrapper_html: { class: "m-t-0" } %>
+
+					      	<div class="row">
+					      		<div class="col-12 col-sm-5 col-lg-3">
+				      				<%= f.input :requester, required: false, label: "Solicitante", label_html: { class: "form-label" } %>
+										</div>	      		
+					      	</div>
+						      		
+					      	<div class="row m-t-25">
+										<div class="col">
+							      	<p class="equipment-category"><%= @stuff_category %></p>
+						          <%= s.input :category, label: false, as: :radio_buttons, collection: list_categories, wrapper_html: { class: "custom-radio" } %>
+										</div>	      		
+					      	</div>
+
+				          <div class="row m-t-25">
+				          	<div class="col-12 col-sm-4">
+											<div class="input string" id="autocomplete-patrimony">
+				          			<label for="order[stuff_attributes][patrimony]" class="form-label">Nº patrimônio</label>
+												<%= autocomplete_field_tag "order[stuff_attributes][patrimony]", @patrimony, autocomplete_stuff_patrimony_orders_path, append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, maxlength: 6 %>
+											</div>
+				          	</div>
+
+				          	<div class="col-12 col-sm-4">
+				        			<%= s.input :brand, required: false, label: "Marca/modelo", collection: list_brands, include_blank: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+				          	</div>
+
+				          	<div class="col-12 col-sm-4">
+				        			<%= f.input :spot, required: false, label: "Local de instalação", collection: list_spots, include_blank: "Selecione o local de instalação...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+				          	</div>
+			          	</div>
+
+				          <div class="row m-t-25">
+				          	<div class="col">
+				          		<%= f.input :defect, required: false, label: "Defeito apresentado", as: :text, label_html: { class: "form-label" } %>
+				          	</div>
+				          </div>
+			    			</div>
+			    		</fieldset>
+
+		    			<fieldset <%= "disabled=disabled" if !is_admin? %>>
+			    			<div id="admin-data" class="order-data <%= 'current' if is_admin?%>">
+					      	<div class="row">
+					      		<div class="col-12 col-sm-6 col-lg-4">
+					      			<%= f.input :status, required: false, label: "Status", collection: list_status, include_blank: "Selecione o status...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+										</div>	
+
+										<div class="col-12 col-sm-6 col-lg-4">
+					      			<% if Stuff.find(@order.stuff_id).category == "PC/Notebook" %>
+					      				<%= f.input :backup, required: false, label: "Necessário backup?", as: :radio_buttons, collection: ['Sim', 'Não'], wrapper_html: { class: "boolean m-t-0" } %>
+											<% end %>
+										</div>      		
+									</div>
+
+					      	<div class="row m-t-25">
+					      		<div class="col-12 col-md-6 col-lg-8">
+				          		<%= f.input :performed_service, required: false, label: "Serviço realizado", as: :text, label_html: { class: "form-label" } %>
+				          	</div>     		
+
+										<div class="col-12 col-md-6 col-lg-4">
+				          		<%= f.input :obs, required: false, label: "Observações", as: :text, label_html: { class: "form-label" } %>
+				          	</div>    
+					      	</div>
+
+
+					      	<div class="row m-t-25">
+			      				<h3 class="uppercase highlight">Técnico responsável</h3>
+
+					      		<div class="col-12 col-sm-6 col-lg-4">
+				          		<%= f.input :removal_technician, required: false, label: "Retirada", collection: @technicians, include_blank: "Quem retirou o equipamento?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+										</div>   		
+
+										<div class="col-12 col-sm-6 col-lg-4">
+											<%= f.input :maintenance_technician, required: false, label: "Manutenção", collection: @technicians, include_blank: "Quem realizou o serviço?", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+				          	</div>   
+					      	</div>
+
+
+		          		<div class="row m-t-25">
+		          			<h3 class="uppercase highlight">Data</h3>
+		          			
+				          	<div class="col content-inline">
+											<%= f.input :start_date, required: false, html5: true, label: "Retirada", label_html: { class: "form-label" } %>
+											<%= f.input :end_date, required: false, html5: true, label: "Entrega", label_html: { class: "form-label" }, wrapper_html: { class: "m-t-0" } %>
+						      	</div>
+		          		</div>
+						    </div>
+			    		</fieldset>
+			      <% end %>
+			    <% end %>
+				</section>
+			</div>
+		</div>
+		
 	</div>
 </div>
