--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,82 +1,98 @@
 <div class="box main-panel">
-	<%= render "layouts/main_menu" %>
+	<%= render "shared/main_menu" %>
 
-	<div class="container main-container">
+	<div class="main-container">
 		<%= flash_message %>
 
-		<header class="container-header">
-			<div class="right-content">
-				<div class="action-buttons">
-					<%= link_to request.params.merge(view: "grid"), alt: "Modo de exibição: quadros", title: "Modo de exibição: quadros", class: "as-grid btn-icon" do %><span class="material-icons md-20">grid_view</span><% end %>
-					<%= link_to request.params.merge(view: "list"), alt: "Modo de exibição: lista", title: "Modo de exibição: lista", class: "as-list btn-icon" do %><span class="material-icons md-20">table_rows</span><% end %>
-					<div class="options">
-						<%= link_to "#", alt: "Filtro avançado", title: "Filtro avançado", class: "btn options-btn icon" do %><i class="fa fa-filter_list"></i>Filtro avançado<% end %>
-						<ul>
-							<li><%= link_to "Chamados sem patrimônio", sp: true %></li>
-						</ul>
+		<div class="row">
+			<div class="col">
+				<header class="container-header">
+					<div class="right-content">
+						<div class="action-buttons">
+							<%= link_to request.params.merge(view: "grid"), alt: "Modo de exibição: quadros", title: "Modo de exibição: quadros", class: "as-grid btn-icon" do %><span class="material-icons md-20">grid_view</span><% end %>
+							<%= link_to request.params.merge(view: "list"), alt: "Modo de exibição: lista", title: "Modo de exibição: lista", class: "as-list btn-icon" do %><span class="material-icons md-20">table_rows</span><% end %>
+							<!-- <div class="options">
+								<%= link_to "#", alt: "Filtro avançado", title: "Filtro avançado", class: "btn options-btn icon" do %><i class="fa fa-filter_list"></i>Filtro avançado<% end %>
+								<ul>
+									<li><%= link_to "Chamados sem patrimônio", sp: true %></li>
+								</ul>
+							</div> -->
+						</div>
+						<%= link_to new_order_path, class: "btn-success icon" do %><span class="material-icons md-16 md-light">add</span>Abrir chamado<% end %>
 					</div>
-				</div>
-				<%= link_to new_order_path, class: "btn-success icon" do %><span class="material-icons md-16 md-light">add</span>Abrir chamado<% end %>
+				</header>
 			</div>
-		</header>
+		</div>
 
 		<%= form_tag(orders_path, method: :get, class: "filters form") do %>
 			<div class="row">
-				<div class="search col-3" id="autocomplete-patrimony">
-					<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, title: "Digite S/P para pesquisar chamados sem patrimônio" %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search" id="autocomplete-patrimony">
+						<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, title: "Digite S/P para pesquisar chamados sem patrimônio" %>
+					</div>
 				</div>
 
-				<div class="search col-3" id="autocomplete-spot">
-					<%= search_field_tag :spot, params[:spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
-					<% list_spots.each do |spot| %>
-				    <%= content_tag :div, spot, class: "search_list list_spots" %>
-					<% end %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search" id="autocomplete-spot">
+						<%= search_field_tag :spot, params[:spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
+						<% list_spots.each do |spot| %>
+					    <%= content_tag :div, spot, class: "search_list list_spots" %>
+						<% end %>
+					</div>
 				</div>
 
-				<div class="search col-3" id="autocomplete-category">
-					<%= search_field_tag :category, params[:category], placeholder: "Categoria. Ex.: PC, impressora, monitor.." %>
-					<% list_categories.each do |category| %>
-				    <%= content_tag :div, category, class: "search_list list_categories" %>
-					<% end %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search" id="autocomplete-category">
+						<%= search_field_tag :category, params[:category], placeholder: "Categoria. Ex.: PC, impressora, monitor.." %>
+						<% list_categories.each do |category| %>
+					    <%= content_tag :div, category, class: "search_list list_categories" %>
+						<% end %>
+					</div>
 				</div>
 
-				<div class="search col-3" id="autocomplete-brand">
-					<%= search_field_tag :brand, params[:brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
-					<% list_brands.each do |brand| %>
-				    <%= content_tag :div, brand, class: "search_list list_brands" %>
-					<% end %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search" id="autocomplete-brand">
+						<%= search_field_tag :brand, params[:brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
+						<% list_brands.each do |brand| %>
+					    <%= content_tag :div, brand, class: "search_list list_brands" %>
+						<% end %>
+					</div>
 				</div>
-			</div>
 
-			<div class="row m-t-15">
-				<div class="col-3">
+				<div class="col-lg-3 col-md-6 col-sm-12">
 					<div class="custom-select">
 						<%= select_tag :status, options_for_select(list_status, params[:status]), include_blank: "Selecione o status..."  %>
 					</div>
 				</div>
 
-				<div class="col-3">
+				<div class="col-lg-3 col-md-6 col-sm-12">
 					<div class="custom-select">
 						<%= select_tag :technician, options_for_select(@technicians.pluck(:name, :id), params[:technician]), include_blank: "Responsável pela manutenção..." %>
 					</div>
 				</div>
 
-				<div class="search col-3">
-					<%= search_field_tag :requester, params[:requester], placeholder: "Solicitante" %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search">
+						<%= search_field_tag :requester, params[:requester], placeholder: "Solicitante" %>
+					</div>
 				</div>
 
-				<div class="search col-3">
-					<%= search_field_tag :school, params[:school], placeholder: "Unidade" %>
-				</div>
-			</div>
-
-			<div class="row m-t-15">
-				<div class="search date col-3" id="start-date">
-					<%= text_field_tag :start_date, params[:start_date], placeholder: "Data inicial", autocomplete: "off", "data-date-format": "dd/mm/yyyy" %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search">
+						<%= search_field_tag :school, params[:school], placeholder: "Unidade" %>
+					</div>
 				</div>
 
-				<div class="search date col-3" id="end-date">
-					<%= text_field_tag :end_date, params[:end_date], placeholder: "Data inicial", autocomplete: "off", "data-date-format": "dd/mm/yyyy" %>
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search date" id="start-date">
+						<%= text_field_tag :start_date, params[:start_date], placeholder: "Data inicial", autocomplete: "off", "data-date-format": "dd/mm/yyyy" %>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search date" id="end-date">
+						<%= text_field_tag :end_date, params[:end_date], placeholder: "Data inicial", autocomplete: "off", "data-date-format": "dd/mm/yyyy" %>
+					</div>
 				</div>
 			</div>
 
