--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,29 +1,35 @@
 <div class="box main-panel">
-  <%= render "layouts/main_menu" %>
+  <%= render "shared/main_menu" %>
 
-  <div class="container main-container">
-    <header class="container-header">
-      <h1 class="header-title">Trocar minha <span>senha</span></h1>
-    </header>
+  <div class="main-container">
+    <div class="row">
+      <div class="col">
+        <header class="container-header">
+          <h1 class="header-title">Trocar minha <span>senha</span></h1>
+
+          <div class="actions">
+            <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
+            <%= link_to profile_path, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
+          </div>
+        </header>
+      </div>
+    </div>
 
     <section class="container-body">
       <%= simple_form_for @user, url: edit_user_password_path, html: { class: "form" } do |f| %>
         <div class="row">
-          <div class="col-4 col-md-6 col-sm-12">
+          <div class="col-12 col-sm-6">
             <%= f.input :password, label: "Senha", label_html: { class: "form-label" }, hint: ("mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length), input_html: { placeholder: "**********"} %>
           </div>
         </div>
         
         <div class="row">
-          <div class="col-4 col-md-6 col-sm-12">
+          <div class="col-12 col-sm-6">
             <%= f.input :password_confirmation, label: "Confirme sua senha", label_html: { class: "form-label" }, input_html: { placeholder: "**********"} %>
           </div>
         </div>
 
-        <div class="actions m-t-50">
-          <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
-          <%= link_to profile_path, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
-        </div>
+        
       <% end %>
     </section>
   </div>
